app/deploy/helloworld-go/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-go
  namespace: default
spec:
  hosts:
    - helloworld-go.127.0.0.1.xip.io
  gateways:
    - helloworld-go
  http:
    - route:
        - destination:
            host: helloworld-go
      corsPolicy:
        allowHeaders:
          - 'Cache-Control'
          - 'Content-Type'
        allowMethods:
          - GET
          - POST
